--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p>I am a freelance web developer based in Indonesia , passionate about web programming, feeling
                     challenged to solve bugs. My style is somewhat skewed towards a minimalist design with a strong
                     focus of stability and functionality.</p>
-                <a href="#" class="cta cta2">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1jk7MJnCG8Td_weTVd9R6JAsDxhE2nFgN/view?usp=sharing" class="cta cta2">Download Resume</a>
             </div>
         </div>
     </section>
